# mlir-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  torch-mlir-config.cmake.in
.github/workflows/: cmake-multi-platform.yml
docs/: dev-environment-development.md  guidance.md  mlir_tools_structure.md  setup_instructions.md
src/: CMakeLists.txt  README.md  how-to-build.txt
src/common/: CMakeLists.txt  common_utils.hpp
src/onnx_c_importer/: CMakeLists.txt  onnx_c_importer.cpp
src/onnx_c_importer/test/: CMakeLists.txt  lit.cfg.py.in  sample_test.mlir
src/test/: CMakeLists.txt  README.md  global_lit_cfg.py  global_lit_site_cfg.py
